# LinOSS-Rust

./: .gitattributes  .gitattributes.auto  .gitignore  ANALYTICAL_BLOCK_ANALYSIS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  DLINOSS_IMPLEMENTATION_SUMMARY.md  EXAMPLES_STATUS.md  EXECUTION_TRACE_IMPLEMENTATION.md  LinossRust&python.code-workspace  LinossRust.code-workspace  PROJECT_STATUS.md  README.md  SYNTHETIC_TESTING_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  all_targets_check.txt  app.js  check_output.txt  compare_eand  example_test_log.txt  index.html  linoss_stubs.py  parallel_scan_notes.md  pyrightconfig.json  scan_integration_report.md  test_key_detection.rs
.cargo/: config.toml
.github/: AI_ASSISTANT_GUIDE.md  KNOWLEDGE_MATRIX.md  README.md  READMEgithub.md  copilot.md  copilot_general.md
.github/workflows/: deploy-web-demo.yml
datastore/: README.md
datastore/processed-by-python/: iris_features.npy  iris_label_map.json  iris_labels.npy  wine.npy
datastore/scripts/: download_and_convert_dataset.py
datastore/sythetic-datasets/: README.md  examine_traces.sh  iris_like.csv  iris_like_features.npy  iris_like_info.md  iris_like_labels.npy  large_multi.csv  large_multi_features.npy  large_multi_info.md  large_multi_labels.npy  small_test.csv  small_test_features.npy  small_test_info.md  small_test_labels.npy  tiny_debug.csv  tiny_debug_features.npy  tiny_debug_info.md  tiny_debug_labels.npy
demo/: DEPLOYMENT.md  GITHUB_PAGES_SETUP.md
development-management/: CITATION_CORRECTIONS.md  DEVELOPMENT_SUMMARY.md  README.md  ROOT_README_REFERENCES.md  ai-acceleration-analysis.md  ci-cd-explanation.md  development-summary.md  linoss_development_directive.md  productivity-analysis.md
development-management/architecture/: CLEANUP_SUMMARY.md  CURRENT_IMPLEMENTATION.md  README.md  UPDATE_SUMMARY.md  brain_dynamics_architecture.drawio  data_flow_diagram.drawio  drawio_analysis_report.md  general_linoss_system_architecture.md  linoss_brain_dynamics_complete.drawio  system-overview.md  timing_sequence_diagram.drawio
development-management/copilot-dump/: AI_PERFORMANCE_ADVISORY_DOCUMENTATION.md  AI_PERFORMANCE_INTEGRATION_COMPLETE.md  AI_PERFORMANCE_QUICK_START.md  BURN_SERIALIZATION_SUMMARY.md  CHECKPOINT_TESTING_COMPLETE.md  INDEX.md  ITERATION_COMPLETE_SUMMARY.md  MODELPARAMS_NAMING_UPDATE.md  ROOT_README_REFERENCES.md  SYNTHETIC_DATASET_FILES_SUMMARY.md
development-management/development-process/: burn-wasm-gotchas.md  coding-standards.md  dotpikl_stuff.txt
development-management/documentation/: api-reference.md
development-management/project-status/: timeline.md
development-management/research-notes/: chaos_convergence_analysis.md  dlinoss-implementation-summary.md  dlinoss_arxiv_2505_12171.md  knowsources.txt  papers.md
development-management/user-guides/: getting-started.md
devtools/: build_mode_selector.sh  simple_ai_status.sh  visualize_brain_dynamics.py
doc/: Cargo.toml  DEPLOYMENT.md  build.sh  index.html
doc/wasm/: linoss_web_demo_bg.wasm
docs/: DEPLOYMENT.md  DLINOSS_GPU_OPTIMIZATION.md  README.md  dotpikl_stuff.txt  index.html
documentation/: README.md  USERMANUALdlinoss.md
examples/: NEUROBREEZE.md  README.md  READMEexamples.md  analyze_brain_dynamics.py  burn_demo.rs  burn_iris_loader.rs  burn_profiler_demo.rs  chaotic_2d_linoss.rs  compare_scan_methods.rs  comprehensive_signal_test.rs  damped_sine_response.rs  dlinoss_gpu_validation.rs  dlinoss_optimized_gpu_test.rs  dlinoss_response_visualizer.rs  dlinoss_screensaver.rs  dlinoss_simple_gpu_test.rs  eeg_decoder_demo.rs  enhanced_brain_dynamics.rs  flyLinoss.rs  multi_lorenz_brain_dynamics.rs  parallel_scan_test.rs  pure_dlinoss_brain_dynamics.rs  sine_wave_training.rs  sine_wave_visualization.rs  synthetic_data_usage.rs  test_fixed_linoss.rs  test_robust_cleanup.rs  train_linoss.rs  wgpu_minimal_test.rs  wgpu_test.rs
examples/dlinoss_diagram/: Cargo.toml  README.md  dlinoss_diagram.code-workspace  run_diagram.sh
examples/dlinoss_diagram/.copilot/: copilot-directions.txt  copilot2copilot-conversation.md
examples/dlinoss_diagram/src/: diagram_renderer.rs  diagram_renderer_simple.rs  main.rs  matrix_symbols.rs  pathfinding.rs  publication_style.rs  rust_repl.rs  svg_export.rs  terminal.rs
examples/egui_native/: 3D_LINOSS_SUCCESS.md  CLEANUP_COMPLETE.md  Cargo.toml  README.md  README_WGPU_UNIFIED.md  WGPU_ARCHITECTURE_ANALYSIS.md  WGPU_ARCHITECTURE_BENEFITS.md  WGPU_EXECUTIVE_SUMMARY.md
examples/egui_native/WORKING/shaders/: neural_fragment.glsl  neural_vertex.glsl
examples/egui_native/copilot-directives/: CLIPPY_CLEANUP_SUMMARY.md  lijstej-met-instructies.txt
examples/egui_native/src/: dlinoss_explorer.rs
examples/egui_native/src/shaders/: neural_compute.wgsl
examples/web_demo/: Cargo.toml  build.sh  demo.html  diagnose_getrandom.sh  index.html  index_minimal_burn.html  index_simple.html  serve.sh  showcase.html  test.html  test_basic.sh  test_burn_wasm.sh
examples/web_demo/.cargo/: config.toml
examples/web_demo/src/: lib.rs  lib_burn.rs  lib_new.rs  lib_old.rs  lib_simplified_burn.rs
ghwebdemo/: Cargo.toml  GITHUB_PAGES_SETUP.md  README.md  build.sh  index.html
ghwebdemo/assets/: style.css
ghwebdemo/src/: lib.rs  simple_dlinoss.rs  visualizer.rs
ghwebdemo/wasm/: linoss_web_demo.d.ts  linoss_web_demo.js  linoss_web_demo_bg.wasm  linoss_web_demo_bg.wasm.d.ts
helper-scripts/: README.md  ai_aliases.sh  ai_status_bar.sh  comprehensive_test.sh  monitor_brain_dynamics.sh
logs/: brain_dynamics_no_dlinoss.json  brain_dynamics_with_dlinoss.json
recovered_files/: Cargo.toml  README.md
recovered_files/src/: lib.rs  main.rs
recovered_files/src/linoss/: mod.rs
reference-implementations/: README.md
scripts/: check_project_status.sh  download_and_convert_dataset.py  git_status_manager.sh  pre-commit
src/: checkpoint.rs  checkpoint_tests.rs  lib.rs  lib_simple.rs  main.rs
tempsetasidefolder/: ffbs.rs
tests/: bidirectional_gpu_test.rs  integration_test.rs
tools/: README.md  ai_performance_advisor.py  restore_terminal.sh  test_python_linoss.py
(+74 files in other folders)
