[package]
name = "linoss_web_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "linoss_web_visualizer"
path = "src/bin/linoss_web_visualizer_simple.rs"

[dependencies]
# UI and visualization
egui = "0.29"
egui_plot = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
env_logger = "0.10"
wgpu = { version = "25.0", optional = true }

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"

# Math and utilities (WASM-compatible versions)
nalgebra = { version = "0.33", default-features = false }

# Animation support
image = { version = "0.25", features = ["gif"] }
egui_extras = { version = "0.29", features = ["image"] }

# Local Burn framework (WASM-compatible) - DISABLED for now due to getrandom issues
# burn = { path = "/home/rustuser/projects/from_github/burn/crates/burn", features = ["wgpu"], default-features = false }

# LinOSS from the parent crate - DISABLED for now due to Burn dependency
# linoss_rust = { path = ".." }

[features]
default = []
gpu = ["wgpu"]


