[package]
name = "dlinoss_diagram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dlinoss_diagram"
path = "src/main.rs"

[dependencies]
# Core LinOSS - temporarily disabled for testing
# linoss_rust = { path = "../.." }
# linoss_rust = { git = "https://github.com/springyworks/LinOSS-Rust.git" }

# Graph layout and pathfinding
mgraphrust = { path = "../../../mGraphRust" }

# egui ecosystem for publication-quality diagrams
egui = { version = "0.29", features = ["serde"] }
eframe = { version = "0.29", features = ["serde"] }

# Logging
env_logger = "0.11"

# Colors and styling for academic diagrams
palette = "0.7"

# Serialization for diagram export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# REPL functionality
evcxr = "0.17"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
