[package]
name = "linoss-egui-examples"
version = "0.1.0"
edition = "2021"

# Main 3D LinOSS visualizers
[[bin]]
name = "linoss_3d_visualizer"
path = "src/bin/linoss_3d_visualizer.rs"

[[bin]]
name = "simple_linoss_3d"
path = "src/bin/simple_linoss_3d.rs"

# WGPU unified architecture demos
[[bin]]
name = "linoss_wgpu_visualizer"
path = "src/bin/linoss_wgpu_visualizer.rs"

[[bin]]
name = "linoss_wgpu_demo"
path = "src/bin/linoss_wgpu_demo.rs"

[[bin]]
name = "linoss_wgpu_unified"
path = "src/bin/linoss_wgpu_unified.rs"

[dependencies]
# UI and visualization
egui = "0.29"
egui_plot = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
egui-wgpu = "0.29"
wgpu = "25.0"
bytemuck = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Math and utilities
rand = "0.8"
anyhow = "1.0"
nalgebra = "0.33"
burn = { version = "0.17", features = ["ndarray", "wgpu"] }

# LinOSS from the parent crate
linoss_rust = { path = "../.." }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
