[package]
name = "linoss-egui-examples"
version = "0.1.0"
edition = "2024"

# Main 3D LinOSS visualizers
[[bin]]
name = "linoss_3d_visualizer"
path = "src/bin/linoss_3d_visualizer.rs"

[[bin]]
name = "simple_linoss_3d"
path = "src/bin/simple_linoss_3d.rs"

# WGPU unified architecture demos
# ⭐ STABLE CONFIG - linoss_wgpu_unified is working (June 28, 2025) ⭐
[[bin]]
name = "linoss_wgpu_visualizer"
path = "src/bin/linoss_wgpu_visualizer.rs"

[[bin]]
name = "linoss_wgpu_demo"
path = "src/bin/linoss_wgpu_demo.rs"

[[bin]]
name = "linoss_wgpu_unified"
path = "src/bin/linoss_wgpu_unified.rs"

[[bin]]
name = "linoss_multimodal_visualizer"
path = "src/bin/linoss_multimodal_visualizer.rs"

[[bin]]
name = "linoss_enhanced_3d_visualizer"
path = "src/bin/linoss_enhanced_3d_visualizer.rs"

[[bin]]
name = "gif_debug"
path = "src/bin/gif_debug.rs"

[dependencies]
# UI and visualization - Use consistent egui 0.31 ecosystem
egui = "0.31"
egui_plot = "0.31"
eframe = { version = "0.31", features = ["wgpu"] }
egui-wgpu = "0.31"
wgpu = "24.0"  # Match eframe's wgpu version
bytemuck = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Image and animation support
image = { version = "0.25", features = ["gif"] }
egui_extras = { version = "0.31", features = ["image"] }

# Math and utilities
rand = "0.8"
anyhow = "1.0"
nalgebra = "0.33"
tokio = { version = "1.0", features = ["full"] }
burn = { path = "/home/rustuser/projects/from_github/burnko/crates/burn", features = ["autodiff", "std", "wgpu"], default-features = false }

# LinOSS from the parent crate
linoss_rust = { path = "../.." }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
