[package]
name = "linoss-web-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
nalgebra = { version = "0.33.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM and web dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement", 
    "MouseEvent",
    "Window",
    "WebGl2RenderingContext",
    "Navigator",
    "Clipboard",
    "ClipboardEvent",
] }

# egui for web GUI - using the minimal approach from GitHub discussion
eframe = { version = "0.31.1", default-features = false, features = ["wgpu"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom fix for WASM - the classic issue!
getrandom = { version = "0.2", features = ["js"] }

# Enable optimizations for WASM
[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = 1
