[package]
name = "linoss-web-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Burn components as optional dependencies (following copilot.md guidance)
burn-tensor = { path = "/home/rustuser/projects/from_github/burn/crates/burn-tensor", default-features = false, features = ["std"], optional = true }
burn-ndarray = { path = "/home/rustuser/projects/from_github/burn/crates/burn-ndarray", default-features = false, optional = true }
burn-autodiff = { path = "/home/rustuser/projects/from_github/burn/crates/burn-autodiff", default-features = false, optional = true }

# D-LinOSS dependencies (minimal, without std)
linoss_rust = { path = "../..", default-features = false, features = ["wasm"], optional = true }

# Core WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

# egui for web UI (WASM-compatible) - enable 'glow' feature for web rendering
eframe = { version = "0.31", default-features = false, features = ["glow"] }
egui = "0.31"
egui_plot = "0.31"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "console"] }

# WASM random number generation (force compatibility as per copilot.md)
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["minimal-burn"]
burn = ["dep:burn-tensor", "dep:burn-ndarray", "dep:burn-autodiff"]
minimal-burn = ["dep:burn-tensor", "dep:burn-ndarray"]
linoss = ["burn", "dep:linoss_rust"]

[profile.release]
opt-level = "s"
lto = true
